@@ -1,3 +1,9 @@
+2011-03-01  Dominique Dumont  <domi.dumont@free.fr> 1.321
+
+        * TkUi.pm: renamed 'check' menu to 'check for errors'. Added 'check for warnings'
+        * AnyViewer: renamed warning widget to 'issue'. Display errors with red background
+        * NodeEditor: added widget to edit node annotations
+
 2011-01-11  Dominique Dumont  <domi.dumont@free.fr> 1.320
 
         * LeafViewer: removed 'apply fix' button. This one is reserved for 
